Finished the routing of the pages. You can add a new message and view the messages on their own page. Now I just need to style the page. If I will.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,16 @@
     <body>
         <h1>Index</h1>
         <p>This is the index!</p>
+        
+        <% messages.forEach((message, index) => { %>
+            <div class="message">
+                <p><%= message.user %> <%= message.added %></p>
+                <p><%= message.text %></p>
 
-        <% messages.forEach((message) => { %>
-            <p><%= message.text %></p>
-            <p><%= message.user %></p>
-            <p><%= message.added %></p>
+                <form method="POST" action="/message/<%= index %>">
+                    <button type="submit">Open Message</button>
+                </form>
+            </div>
         <% }) %>
 
         <a href="/new">Add a new message here!</a>
