--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,26 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="./styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
     <body>
-        <h1>Index</h1>
-        <p>This is the index!</p>
+        <h1>Message Board</h1>
         
-        <% messages.forEach((message, index) => { %>
-            <div class="message">
-                <p><%= message.user %> <%= message.added %></p>
-                <p><%= message.text %></p>
-
-                <form method="POST" action="/message/<%= index %>">
-                    <button type="submit">Open Message</button>
-                </form>
-            </div>
-        <% }) %>
+        <div class="message-container">
+            <% messages.forEach((message, index) => { %>
+                <div class="message">
+                    <p><%= message.user %> <%= message.added %></p>
+                    <p><%= message.text %></p>
+    
+                    <form method="POST" action="/message/<%= index %>">
+                        <button type="submit">Open Message</button>
+                    </form>
+                </div>
+            <% }) %>
+        </div>
 
         <a href="/new">Add a new message here!</a>
+
+        <footer>Made by TheCheeseMeister</footer>
     </body>
 </html>
