Added a controller to make it simpler to handle gets and posts. (why was i doing it the way I was before its so much cleaner this way...) Also added new functionality for interacting with a database. Currently interacts with the one on koyeb.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,13 @@
         <h1>Message Board</h1>
         
         <div class="message-container">
+            <% if (messages.length == 0) { %>
+                <p>There are no messages yet.</p>
+            <% } %>
+            
             <% messages.forEach((message, index) => { %>
                 <div class="message">
-                    <p><%= message.user %> <%= message.added %></p>
+                    <p><%= message.name %> <%= message.date %></p>
                     <p><%= message.text %></p>
     
                     <form method="POST" action="/message/<%= index %>">
