--- a/views/message.ejs
+++ b/views/message.ejs
@@ -6,7 +6,7 @@
         <h1>Viewing message!</h1>
 
         <div class="message">
-            <p><%= message.user %> <%= message.added %></p>
+            <p><%= message.name %> <%= message.date %></p>
             <p><%= message.text %></p>
         </div>
 
